[gd_scene load_steps=8 format=1]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://left_pallete.png" type="Texture" id=2]
[ext_resource path="res://right_pallete.png" type="Texture" id=3]
[ext_resource path="res://separator.png" type="Texture" id=4]
[ext_resource path="res://ball.png" type="Texture" id=5]
[ext_resource path="res://title.png" type="Texture" id=6]
[ext_resource path="res://white_pallete.png" type="Texture" id=7]

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="left" type="Sprite" parent="."]

transform/pos = Vector2( 67, 183 )
texture = ExtResource( 2 )

[node name="right" type="Sprite" parent="."]

transform/pos = Vector2( 577, 183 )
texture = ExtResource( 3 )

[node name="separator" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 320, 200 )
texture = ExtResource( 4 )

[node name="ball" type="Sprite" parent="."]

transform/pos = Vector2( 320, 188 )
texture = ExtResource( 5 )

[node name="1player" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 280.0
margin/top = 85.0
margin/right = 363.0
margin/bottom = 106.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Label" type="Label" parent="1player"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 7.0
margin/top = 4.0
margin/right = 88.0
margin/bottom = 18.0
text = "One Player"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Title" type="Sprite" parent="1player"]

transform/pos = Vector2( 119.585, -7.27738 )
texture = ExtResource( 6 )

[node name="scoreboard" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 320, 36 )
transform/rot = 90.0
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="score" type="Label" parent="scoreboard"]

rect/rotation = -90.0
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 3.0
margin/top = -9.0
margin/right = 50.0
margin/bottom = 6.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0  -  0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="continue" type="Button" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 280.0
margin/top = 145.0
margin/right = 363.0
margin/bottom = 166.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Label" type="Label" parent="continue"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 12.0
margin/top = 4.0
margin/right = 139.0
margin/bottom = 18.0
text = "Continue"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="2player" type="Button" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 280.0
margin/top = 115.0
margin/right = 363.0
margin/bottom = 136.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Label" type="Label" parent="2player"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = 4.0
margin/right = 86.0
margin/bottom = 18.0
text = "Two Players"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="tutorial" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 47.0
margin/top = 226.0
margin/right = 1053.0
margin/bottom = 279.0
text = "Player 1                                                                                                                 Player 2
  (A, S)                                         Hit \"Escape\" for Menu                                      (Up, Down)"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="button_down" from="1player" to="." method="_on_1player_button_down"]

[connection signal="button_down" from="continue" to="." method="_on_continue_button_down"]

[connection signal="button_down" from="2player" to="." method="_on_2player_button_down"]


